Adds multiple SSIDs.

--- a/arduino/m5stack_core2/wifi_credentials.h.example
+++ b/arduino/m5stack_core2/wifi_credentials.h.example
@@ -1,5 +1,6 @@
 // This file is checked in as "wifi_credentials.h.example".
 // Please rename to "wifi_credentials.h" and update settings.
-const char* ssid = "nurupi4";
-const char* password = "opensecret";
+#define WIFIS_N 2
+const char* ssids[] = {"nurupi4", "nurupi2"};
+const char* passwords[] = {"opensecret", "opensecret"};
 const char* udpAddress = "192.168.4.1";
