--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,15 @@ dependencies = [
     "aiohttp>=3.12.15",
     "netifaces>=0.11.0",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.8",
+]
+
+[tool.ruff]
+indent-width = 2
+
+[tool.ruff.format]
+indent-style = "space"
+quote-style = "single"
